# sgeop

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: mypy.yml  testing.yml
ci/: py310_sgeop-oldest.yaml  py311_latest.yaml  py311_oldest.yaml  py311_sgeop-latest.yaml  py311_sgeop-oldest.yaml  py312_latest.yaml  py312_sgeop-dev.yaml  py312_sgeop-latest.yaml  py313_dev.yaml  py313_latest.yaml  py313_sgeop-dev.yaml  py313_sgeop-latest.yaml
ci_artifacts/apalachicola/: simplified_standard.parquet
data/: README.md  generate_simplified.py
data/aleppo_1133/: original.parquet  simplified.parquet
data/auckland_869/: original.parquet  simplified.parquet
data/bucaramanga_4617/: original.parquet  simplified.parquet
data/douala_809/: original.parquet  simplified.parquet
data/liege_1656/: original.parquet  simplified.parquet
data/slc_4881/: original.parquet  simplified.parquet
data/wuhan_8989/: original.parquet  simplified.parquet
neatnet/: __init__.py  artifacts.py  continuity.py  geometry.py  nodes.py  simplify.py
neatnet/tests/: conftest.py  test_artifacts.py  test_continuity.py  test_geometry.py  test_nodes.py  test_simplify.py
neatnet/tests/data/: apalachicola_simplified_exclusion_mask.parquet
sgeop/: __init__.py  artifacts.py  continuity.py  geometry.py  nodes.py  simplify.py
sgeop/tests/: conftest.py  test_artifacts.py  test_continuity.py  test_geometry.py  test_nodes.py  test_simplify.py
sgeop/tests/data/: apalachicola_original.parquet  apalachicola_simplified.parquet  apalachicola_simplified_exclusion_mask.parquet
